--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body onload="onInit()" oncontextmenu="return false;">
-    <h1>Lets sweep some MINES</h1>
+    <h1>MineSweeper</h1>
     <div class="timer">Time: <span>LIFE </span>/s</div>
     <div class="lifes">lifes: <span></span></div>
     <button class="button" onclick="onInit()" onclick="stopTime()">Easy</button>
