--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <h1>MineSweeper</h1>
     <div class="timer">Time: <span>LIFE </span>/s</div>
     <div class="lifes">lifes: <span></span></div>
+    <!-- <button class="hint" onclick="giveHint(this)">💡</button> -->
     <button class="button" onclick="initGame()" onclick="stopTime()">Easy</button>
     <button class="button" onclick="initGame(8)" onclick="stopTime()">Hard</button>
     <button class="button" onclick="initGame(12)" onclick="stopTime()">Brave++</button>
