--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body  onload="initGame()" oncontextmenu="return false;">
     <h1>MineSweeper</h1>
     <div class="timer">Time: <span>0</span>/s</div>
+    <div class="flag">Flags <span></span></div>
     <div class="lifes">lifes: <span></span></div>
     <button class="hint1" onclick="giveHint(this)">💡</button>
     <button class="hint2" onclick="giveHint(this)">💡</button>
